--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -13,11 +13,11 @@
                 </div>
                 <div>
                     <string>Last active:</string>
-                    <p>{{member.lastActive | date}}</p>
+                    <p>{{member.lastActive | timeago}}</p>
                 </div>
                 <div>
                     <string>Member since:</string>
-                    <p>{{member.created | date}}</p>
+                    <p>{{member.created | date: 'dd MMM yyyy'}}</p>
                 </div>
             </div>
             <div class="card-footer">
