--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -22,6 +22,23 @@
         </div>
         <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
         <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filters</button>
+        <div class="col">
+            <div class="btn-group float-right">
+                <button type="button" 
+                    class="btn btn-primary" 
+                    name="orderby" 
+                    (click)="loadMembers()" 
+                    btnRadio="lastAcive" 
+                    [(ngModel)]="userParams.orderBy">Last Active</button>
+    
+                <button type="button" 
+                    class="btn btn-primary" 
+                    name="orderby" 
+                    (click)="loadMembers()" 
+                    btnRadio="created" 
+                    [(ngModel)]="userParams.orderBy">Newest Members</button>
+            </div>
+        </div>
     </form>
 </div>
 <div class="row">
