--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
                 <button class="bt btn-primary" routerLink="/members/{{member.username}}"><i class="fa fa-user"></i></button>
             </li>
             <li class="list-inline-item">
-                <button class="bt btn-primary"><i class="fa fa-heart"></i></button>
+                <button class="bt btn-primary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
             </li>
             <li class="list-inline-item">
                 <button class="bt btn-primary"><i class="fa fa-envelope"></i></button>
